# Software_Engineering_Project

./: .gitignore  CMakeLists.txt  README.md  user input
UMLs/: uml ass1 code  uml ass2 code
data/ptest/: p_result.csv
serverWIthTimeOut/old server/: TCPServer.cpp  TCPServer.h
src/classifier/: Classifier.cpp  Classifier.h  Comparable.cpp  Comparable.h  DataProcesser.cpp  DataProcesser.h  Distance.cpp  Distance.h  Metric.cpp  Metric.h  Select_k.cpp  Select_k.h
src/classifier/knnClassifiers/: Knn.cpp  Knn.h  KnnDataClassifier.cpp  KnnDataClassifier.h
src/server/IOS/: CsvFileIO.cpp  CsvFileIO.h  DefaultIO.cpp  DefaultIO.h  SocketIO.cpp  SocketIO.h  StandrardIO.cpp  StandrardIO.h
src/server/client/: ClientCLI.cpp  ClientCLI.h  ClientIO.cpp  ClientIO.h  main.cpp
src/server/client/commands/: ClientCommand.cpp  ClientCommand.h
src/server/client/commands/clientClassifieCommand/: ClientClassifieCommand.cpp  ClientClassifieCommand.h
src/server/client/commands/clientClassifiedDataCommands/: ClientClassifiedDataCommand.cpp  ClientClassifiedDataCommand.h
src/server/serverCommandLineInterface/: ServerCLI.cpp  ServerCLI.h
src/server/serverCommandLineInterface/data/: ClassifiedData.cpp  ClassifiedData.h  Data.cpp  Data.h  DataFile.cpp  DataFile.h
src/server/serverCommandLineInterface/serverCommands/: Command.cpp  Command.h
src/server/serverCommandLineInterface/settings/: Settings.cpp  Settings.h
src/server/tcpServer/: TCPServer.cpp  TCPServer.h  ThreadList.cpp  ThreadList.h  main.cpp
test/csvTest/: main.cpp
test/testClient/: TestClient.cpp  TestClient.h  main.cpp
test/testServer/: main.cpp
(+26 files in other folders)
